// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Treasure should render when active and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    isActive={true}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="rgba(255,255,255,1)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
          width="3"
          x="380.2"
          y="62.7"
        />,
        <Rect
          fill="rgba(255,255,255,1)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
          width="3"
          x="371.6"
          y="71.3"
        />,
        <Rect
          fill="rgba(255,255,255,1)"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="366"
          y="85.5"
        />,
        <Path
          d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
          fill="rgba(255,255,255,1)"
        />,
        <Circle
          cx="410.5"
          cy="18"
          fill="rgba(255,255,255,1)"
          r="10"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,1)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
          "width": "3",
          "x": "380.2",
          "y": "62.7",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,1)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
          "width": "3",
          "x": "371.6",
          "y": "71.3",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,1)",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "366",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
          "fill": "rgba(255,255,255,1)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "410.5",
          "cy": "18",
          "fill": "rgba(255,255,255,1)",
          "r": "10",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="rgba(255,255,255,1)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
            width="3"
            x="380.2"
            y="62.7"
          />,
          <Rect
            fill="rgba(255,255,255,1)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
            width="3"
            x="371.6"
            y="71.3"
          />,
          <Rect
            fill="rgba(255,255,255,1)"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="366"
            y="85.5"
          />,
          <Path
            d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
            fill="rgba(255,255,255,1)"
          />,
          <Circle
            cx="410.5"
            cy="18"
            fill="rgba(255,255,255,1)"
            r="10"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,1)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
            "width": "3",
            "x": "380.2",
            "y": "62.7",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,1)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
            "width": "3",
            "x": "371.6",
            "y": "71.3",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,1)",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "366",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
            "fill": "rgba(255,255,255,1)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "410.5",
            "cy": "18",
            "fill": "rgba(255,255,255,1)",
            "r": "10",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Treasure should render when inactive and not pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    isActive={false}
    isPressed={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="rgba(255,255,255,0.4)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
          width="3"
          x="380.2"
          y="62.7"
        />,
        <Rect
          fill="rgba(255,255,255,0.4)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
          width="3"
          x="371.6"
          y="71.3"
        />,
        <Rect
          fill="rgba(255,255,255,0.4)"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="366"
          y="85.5"
        />,
        <Path
          d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
          fill="rgba(255,255,255,0.4)"
        />,
        <Circle
          cx="410.5"
          cy="18"
          fill="rgba(255,255,255,0.4)"
          r="10"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.4)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
          "width": "3",
          "x": "380.2",
          "y": "62.7",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.4)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
          "width": "3",
          "x": "371.6",
          "y": "71.3",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.4)",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "366",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
          "fill": "rgba(255,255,255,0.4)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "410.5",
          "cy": "18",
          "fill": "rgba(255,255,255,0.4)",
          "r": "10",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="rgba(255,255,255,0.4)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
            width="3"
            x="380.2"
            y="62.7"
          />,
          <Rect
            fill="rgba(255,255,255,0.4)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
            width="3"
            x="371.6"
            y="71.3"
          />,
          <Rect
            fill="rgba(255,255,255,0.4)"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="366"
            y="85.5"
          />,
          <Path
            d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
            fill="rgba(255,255,255,0.4)"
          />,
          <Circle
            cx="410.5"
            cy="18"
            fill="rgba(255,255,255,0.4)"
            r="10"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.4)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
            "width": "3",
            "x": "380.2",
            "y": "62.7",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.4)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
            "width": "3",
            "x": "371.6",
            "y": "71.3",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.4)",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "366",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
            "fill": "rgba(255,255,255,0.4)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "410.5",
            "cy": "18",
            "fill": "rgba(255,255,255,0.4)",
            "r": "10",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`Treasure should render when inactive and pressed 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Treasure
    isActive={false}
    isPressed={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <Rect
          fill="rgba(255,255,255,0.2)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
          width="3"
          x="380.2"
          y="62.7"
        />,
        <Rect
          fill="rgba(255,255,255,0.2)"
          height="8"
          rx={0}
          ry={0}
          transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
          width="3"
          x="371.6"
          y="71.3"
        />,
        <Rect
          fill="rgba(255,255,255,0.2)"
          height="3"
          rx={0}
          ry={0}
          width="8"
          x="366"
          y="85.5"
        />,
        <Path
          d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
          fill="rgba(255,255,255,0.2)"
        />,
        <Circle
          cx="410.5"
          cy="18"
          fill="rgba(255,255,255,0.2)"
          r="10"
        />,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.2)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
          "width": "3",
          "x": "380.2",
          "y": "62.7",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.2)",
          "height": "8",
          "rx": 0,
          "ry": 0,
          "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
          "width": "3",
          "x": "371.6",
          "y": "71.3",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "fill": "rgba(255,255,255,0.2)",
          "height": "3",
          "rx": 0,
          "ry": 0,
          "width": "8",
          "x": "366",
          "y": "85.5",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
          "fill": "rgba(255,255,255,0.2)",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "cx": "410.5",
          "cy": "18",
          "fill": "rgba(255,255,255,0.2)",
          "r": "10",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Rect
            fill="rgba(255,255,255,0.2)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)"
            width="3"
            x="380.2"
            y="62.7"
          />,
          <Rect
            fill="rgba(255,255,255,0.2)"
            height="8"
            rx={0}
            ry={0}
            transform="matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)"
            width="3"
            x="371.6"
            y="71.3"
          />,
          <Rect
            fill="rgba(255,255,255,0.2)"
            height="3"
            rx={0}
            ry={0}
            width="8"
            x="366"
            y="85.5"
          />,
          <Path
            d="M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z"
            fill="rgba(255,255,255,0.2)"
          />,
          <Circle
            cx="410.5"
            cy="18"
            fill="rgba(255,255,255,0.2)"
            r="10"
          />,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.2)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.866 -0.5 0.5 0.866 17.8102 199.7843)",
            "width": "3",
            "x": "380.2",
            "y": "62.7",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.2)",
            "height": "8",
            "rx": 0,
            "ry": 0,
            "transform": "matrix(0.5 -0.866 0.866 0.5 121.3991 360.7773)",
            "width": "3",
            "x": "371.6",
            "y": "71.3",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "fill": "rgba(255,255,255,0.2)",
            "height": "3",
            "rx": 0,
            "ry": 0,
            "width": "8",
            "x": "366",
            "y": "85.5",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "d": "M454.6,63.3c-2.6-4.6-7.5-7.1-12.4-7v0l-40.1,0c-2.3,0-4.5,0.6-6.6,1.9l-7.8,4.5l12,20.7h-2.4h-16.5v37h40h1.5 h21.5V85.7l5.7-3.3C456.2,78.5,458.5,70,454.6,63.3z M397,60.7c1.7-1,3.4-1.5,5.1-1.5l31.4,0l-4.2,2.4h-34L397,60.7z M400.3,86.3h5 v2.5c0,1.4-1.1,2.5-2.5,2.5s-2.5-1.1-2.5-2.5V86.3z M383.8,117.3v-31h13.5v2.5c0,3,2.5,5.5,5.5,5.5s5.5-2.5,5.5-5.5v-2.5h12.5v31 H383.8z M420.8,83.3h-12.5h-5.1l-10.8-18.7h36.5l10.8,18.7h-17.4H420.8z M440.8,117.3h-17v-31h17V117.3z M448,79.8l-5.2,3l-11-19.1 l5.2-3c5.3-3,12-1.2,15,4C455.1,70,453.3,76.8,448,79.8z",
            "fill": "rgba(255,255,255,0.2)",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "cx": "410.5",
            "cy": "18",
            "fill": "rgba(255,255,255,0.2)",
            "r": "10",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getSnapshotBeforeUpdate": true,
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
